@@ -1,3 +1,9 @@
+2007-06-29  Jens Granseuer  <jensgr@gmx.net>
+
+	* actions/acme.glade:
+	* gsd-media-keys-window.c: (gsd_media_keys_window_init): add a frame to
+	the media popup (closes bug #451674)
+
 2007-06-22  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* gnome-settings-daemon.c: incorporate fixes from Matthias Clasen in
